# Group_6_project

./: .gitignore  LICENSE  MANIFEST.in  error_processing.py  filewalker.py  handler.py  handler_address_book.py  handler_note_book.py  handler_solver.py  main.py  normalize.py  parser.py  setup.py  solver.py  solver_address_book.py  solver_note_book.py  solver_notebook.py  sort.py
all_files/: .dockerignore  Dockerfile  MANIFEST.in  README.md  addressbook_helper  handler_address_book.py  handler_note_book.py  main.py  normalize.py  notebook_helper  pyproject.toml  requirements.txt  solver_address_book.py  solver_note_book.py  sort.py
