[tool.poetry]
name = "group_6_project"
version = "0.1.0"
description = "Group project for poetry practice"
authors = ["Dima Serdiuk <serdyuk0002@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.5"
requests = "^2.28.1"
pyinstaller = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"
